Revision history for {{$dist->name}}

{{$NEXT}}

0.06      2014-06-18 15:45:11 -0400
  - fix system_install / Alien::Libarchive combination
  - tests do not require internet connection

0.05      2014-06-11 05:23:31 -0400
  - make t/versions_available.t contingent on HTTP::Tiny

0.04      2014-06-10 12:48:25 -0400
  - fix test failure when HTTP::Tiny is not installed

0.03      2014-06-10 09:41:05 -0400
  - fix version for Alien::MSYS

0.02      2014-06-10 06:09:09 -0400
  - added alien option for system_install
  - keep symbolic links as symbolic links when copy to dll directory

0.01      2014-06-09 16:46:04 -0400
  - initial version