@@ -240,7 +240,7 @@ B<NOTE:> using this method may require modules returned by the
 L<system_requires|Alien::Libarchive::Installer> method.
 
 B<NOTE:> This form will also use the libarchive provided by L<Alien::Libarchive>
-if version 0.19 or better is installed.  This makes this method ideal for
+if version 0.21 or better is installed.  This makes this method ideal for
 finding libarchive as an optional dependency.
 
 Options:
@@ -277,7 +277,7 @@ to verify
 =item alien
 
 If true (the default) then an existing L<Alien::Libarchive> will be
-used if version 0.19 or better is found.  Usually this is what you
+used if version 0.21 or better is found.  Usually this is what you
 want.
 
 =back
@@ -293,7 +293,7 @@ sub system_install
   die "test must be one of compile, ffi or both"
     unless $options{test} =~ /^(compile|ffi|both)$/;
 
-  if($options{alien} && eval q{ use Alien::Libarchive 0.19; 1 })
+  if($options{alien} && eval q{ use Alien::Libarchive 0.21; 1 })
   {
     my $alien = Alien::Libarchive->new;
     
