@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - only use Alien::Libarchive if it is 0.21 or better
+    as 0.19-0.20 may result in infinite recursion
 
 0.06      2014-06-18 15:45:11 -0400
   - fix system_install / Alien::Libarchive combination
